--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="https://static.vecteezy.com/system/resources/previews/009/970/456/original/eps10-orange-quotation-mark-icon-isolated-on-white-background-double-quotes-symbol-in-a-simple-flat-trendy-modern-style-for-your-website-design-logo-ui-pictogram-and-mobile-application-vector.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>quotes</title>
   <script src="https://kit.fontawesome.com/26b9def6b3.js" crossorigin="anonymous"></script>
